--- a/base-css.html
+++ b/base-css.html
@@ -20,10 +20,10 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
  <!-- Basic Page Needs
 ================================================= -->
  <meta charset="utf-8">
- <title>Wirefy | The Responsive Wireframe Framework</title>
+ <title>Wirefy | Base CSS</title>
  <meta name="description" content="Wirefy: Beautiful Framework for Responsive Wireframe Development">
  <meta name="author" content="Chris Da Sie">
- 
+ <meta name="google-site-verification" content="_e_ToLBbU4WGZMUmvoydqKzccRnB8mjMYAcG5HDjl-I" />
  
  <!-- Mobile Specific Metas
 ================================================= -->
