--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
  <title>Wirefy | The Responsive Wireframe Framework</title>
  <meta name="description" content="Wirefy: Beautiful Framework for Responsive Wireframe Development">
  <meta name="author" content="Chris Da Sie">
+ <meta name="google-site-verification" content="_e_ToLBbU4WGZMUmvoydqKzccRnB8mjMYAcG5HDjl-I" />
  
  
  <!-- Mobile Specific Metas
