--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- 
 Wirefy by Chris Da Sie
-Version: 2.0.1
+Version: 2.0.2
 URL: https://github.com/cjdsie/wirefy
 Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 -->
@@ -33,10 +33,11 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
  
  
  <!-- CSS - These are your main CSS files. All base styles can be found in the base.css and any additional styles 
- or overwrites should be used in the layout.css. 
+ or overwrites should be used in the layout.css. We have now added support for SASS. Using CodeKit or a similar preprocessor
+will help you write and rewrite the SCSS files.  
 ================================================= -->
- <link rel="stylesheet" href="css/base.css">
- <link rel="stylesheet" href="css/layout.css">
+ <link rel="stylesheet" href="css/base.css"> <!-- Compressed and compiled from base.scss -->
+ <link rel="stylesheet" href="css/layout.css"> <!-- Compiled from layout.scss -->
  
  
  <!-- Browser Specific Javascript
