URL home redirect on logo

--- a/ask-a-question.html
+++ b/ask-a-question.html
@@ -99,7 +99,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 	<div class="container clearfix">
   	<header role="banner" class="clearfix">
 	<div class="logo ten columns">
-		<a href="/wirefy/">
+		<a href="/">
 	<h2>Wirefy</h2>
 	</a>
 	</div>
