--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
   <!-- This is the header information. You can add things like logos and navigation here. -->
     <header role="banner" class="clearfix">
 	<div class="logo ten columns">
-		<a href="/wirefy/">
+		<a href="/">
 	<h2>Wirefy</h2>
 	</a>
 	</div>
