--- a/ask-a-question.html
+++ b/ask-a-question.html
@@ -172,14 +172,12 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 
   <!-- JS - Add or remove any of the scripts to suit the functionality you wish to display. 
   ================================================== -->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="js/jquery-1.7.2.min.js"><\/script>')</script>
-  <script src="js/respond.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+  <script>window.jQuery || document.write('<script src="js/jquery-1.8.2.min.js"><\/script>')</script>
   <script src="js/mediaCheck-min.js"></script>
   <script src="js/jquery.lettering.js"></script>
   <script src="js/jquery.fittext.js"></script>
   <script src="js/jquery.flexnav-min.js"></script>
-  <script src="js/bootstrap-typeahead.js"></script>
   <script src="js/tabs.js"></script>
   <script src="js/responsiveslides.min.js"></script>
   <script src="js/responsive_dropdown.js"></script>
@@ -202,6 +200,13 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 				$(this).html(originalText);
 			})
 	</script>
+	<script>
+    yepnope({
+      test : Modernizr.mq('@media only screen and (width)'),
+      yep  : '',
+      nope : 'js/css3-mediaqueries.js',
+    });
+  </script>
   
   
   <!-- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
