--- a/index.html
+++ b/index.html
@@ -39,13 +39,15 @@ will help you write and rewrite the SCSS files.
  <link rel="stylesheet" href="css/base.css"> <!-- Compressed and compiled from base.scss -->
  <link rel="stylesheet" href="css/layout.css"> <!-- Compiled from layout.scss -->
  
+ <script src="js/modernizr.js"></script>
  
  <!-- Browser Specific Javascript
 ================================================= -->
  <!--[if (lt IE 9) & (!IEMobile)]>
  <script src="js/selectivizr-min.js"></script>
+ <script src="js/css3-mediaqueries.js"></script>
  <![endif]-->
- <script src="js/modernizr.js"></script>
+
 
 
  <!-- Favicon
@@ -158,13 +160,6 @@ will help you write and rewrite the SCSS files.
   <script src="js/plugins.js"></script>
   <script src="js/script.js"></script>
   <script src="js/helper.js"></script>
-  <script>
-    yepnope({
-      test : Modernizr.mq('@media only screen and (width)'),
-      yep  : '',
-      nope : 'js/css3-mediaqueries.js',
-    });
-  </script>
   
   
   <!-- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
