--- a/getting-started.html
+++ b/getting-started.html
@@ -142,7 +142,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 	<section class="information eleven columns alt-spacing">
 		<section class="doc-section" id="download">
 		<h3>Download</h3>
-		<p>Before you download the latest version of Wirefy, make sure you have a code editor available. We recommend TextMate or Coda2. You will also need some working knowledge of HTML and CSS. Ok now that we have that settled let's get started. We've strived to keep Wirefy as compact as possible and continue to work on techniques to better our compression. Currently the entire document is just under ~700Kb.</p>
+		<p>Before you download the latest version of Wirefy, make sure you have a code editor available. We recommend TextMate or Coda2. You will also need some working knowledge of HTML and CSS. Ok now that we have that settled let's get started. We've strived to keep Wirefy as compact as possible and continue to work on techniques to better our compression. Currently the entire document is just under ~300Kb zipped.</p>
 			<a href="https://github.com/cjdsie/wirefy/zipball/master" class="remove-bottom button large">Download Wirefy from Github</a>
 			<div class="post-button-note half-bottom">or <a href="https://github.com/cjdsie/wirefy/">View Source on Github</a>
 		</div>
