Better documentation for slider

--- a/index.html
+++ b/index.html
@@ -114,12 +114,13 @@ will help you write and rewrite the SCSS files.
       which slide show you would like. You may need to modify this if you do not want it to fill 
       the 960 grid. 
  	  For Example:
- 
- 	    <ul class="rslides" id="slider1">
- 	      <li><img src="http://placehold.it/1200x300" alt="" /></li>
- 	      <li><img src="http://placehold.it/1200x300" alt="" /></li>
- 	      <li><img src="http://placehold.it/1200x300" alt="" /></li>
- 	    </ul> -->
+ 		<div class="rslides_container">
+ 	      <ul class="rslides" id="slider1">
+ 	        <li><img src="http://placehold.it/1200x300" alt="" /></li>
+ 	        <li><img src="http://placehold.it/1200x300" alt="" /></li>
+ 	        <li><img src="http://placehold.it/1200x300" alt="" /></li>
+ 	      </ul> 
+		</div>-->
 
 		<!-- Columns 
 		The columns have changed. You can now use them in a much more fluid way. In case you need 
