--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- 
 Wirefy by Chris Da Sie
-Version: 2.0.4
+Version: 2.0.5
 URL: https://getwirefy.com
 Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 -->
@@ -45,7 +45,6 @@ will help you write and rewrite the SCSS files.
 ================================================= -->
  <!--[if (lt IE 9) & (!IEMobile)]>
  <script src="js/selectivizr-min.js"></script>
- <script src="js/css3-mediaqueries.js"></script>
  <![endif]-->
 
 
@@ -127,16 +126,23 @@ will help you write and rewrite the SCSS files.
 		a bit of extra spacing we've included a class called alt-spacing. 
 		
 		Example 1:
-		<section class="row clearfix">
+		<section class="row">
 		<div class="ten columns"></div>
 		<div class="six columns"></div>
 		</section> 
 		
 		Example 2:
-		<section class="row clearfix">
+		<section class="row">
 		<div class="five columns"></div>
 		<div class="five columns alt-spacing"></div>
 		<div class="five columns alt-spacing"></div>
+		</section>
+		
+		Example 3:
+		<section class="gallery row">
+		<div class="four columns"></div>
+		<div class="four columns"></div>
+		<div class="four columns"></div>
 		</section>
 		
 		-->
@@ -152,6 +158,7 @@ will help you write and rewrite the SCSS files.
   ================================================== -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/jquery-1.8.2.min.js"><\/script>')</script>
+  <script src="js/respond.js"></script>
   <script src="js/jquery.flexnav-min.js"></script>
   <script src="js/tabs.js"></script>
   <script src="js/responsiveslides.min.js"></script>
