Added Gallery class to features

--- a/features.html
+++ b/features.html
@@ -45,7 +45,6 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 ================================================= -->
  <!--[if (lt IE 9) & (!IEMobile)]>
  <script src="js/selectivizr-min.js"></script>
-<script src="js/css3-mediaqueries.js"></script>
  <![endif]-->
  
 
@@ -134,6 +133,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 		  	<ul>
 			    <li><a href="#grid">Grid <i class="icon-chevron-right alignright"></i></a></li>
 			    <li><a href="#slideshow">Slideshow <i class="icon-chevron-right alignright"></i></a></li>
+				<li><a href="#gallery">Gallery <i class="icon-chevron-right alignright"></i></a></li>
 			    <li><a href="#menu">Menu <i class="icon-chevron-right alignright"></i></a></li>
 				<li><a href="#breadcrumbs">Breadcrumbs <i class="icon-chevron-right alignright"></i></a></li>
 				<li><a href="#pagination">Pagination <i class="icon-chevron-right alignright"></i></a></li>
@@ -247,6 +247,41 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 				<script src="https://gist.github.com/3369914.js"> </script>
 			</div>
 		</section>
+		
+		<section class="doc-section" id="gallery">
+			<h3>Gallery</h3>
+			<p>Often times, projects require the use of a balanced list of equal weight and height such as listing client logos or portfolio thumbnails. The gallery class can help you set up these use cases faster and more efficiently. The class name <i>.gallery</i> can be used with any row class <i>.one</i> through <i>.sixteen</i>.</p>
+			<div class="gallery row">
+					<div class="four columns">
+						<img src="http://placehold.it/500x450&text=[img1]" alt="" />
+					</div>
+					<div class="four columns">
+						<img src="http://placehold.it/500x450&text=[img2]" alt="" />
+					</div>
+					<div class="four columns">
+						<img src="http://placehold.it/500x450&text=[img3]" alt="" />
+					</div>
+					<div class="four columns">
+						<img src="http://placehold.it/500x450&text=[img4]" alt="" />
+					</div>	
+					<div class="four columns">
+						<img src="http://placehold.it/500x450&text=[img5]" alt="" />
+					</div>
+					<div class="four columns">
+						<img src="http://placehold.it/500x450&text=[img6]" alt="" />
+					</div>
+					<div class="four columns">
+						<img src="http://placehold.it/500x450&text=[img7]" alt="" />
+					</div>
+					<div class="four columns">
+						<img src="http://placehold.it/500x450&text=[img8]" alt="" />
+					</div>
+			</div>
+			<div class="hidden-code clearfix">
+			<p>Code Example</p>
+				<script src="https://gist.github.com/3986520.js"> </script>
+			</div>	
+		</section>	
 		
 		<section class="doc-section" id="menu">
 			<h3>Menus</h3>
@@ -887,6 +922,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/jquery-1.8.2.min.js"><\/script>')</script>
   <script src="js/mediaCheck-min.js"></script>
+  <script src="js/respond.js"></script>
   <script src="js/jquery.lettering.js"></script>
   <script src="js/jquery.fittext.js"></script>
   <script src="js/jquery.flexnav-min.js"></script>
