--- a/getting-started.html
+++ b/getting-started.html
@@ -45,7 +45,6 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 ================================================= -->
  <!--[if (lt IE 9) & (!IEMobile)]>
  <script src="js/selectivizr-min.js"></script>
-<script src="js/css3-mediaqueries.js"></script>
  <![endif]-->
 
 
@@ -156,7 +155,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 		</section>
 		<section class="doc-section" id="html-template">
 		<h3>HTML Template</h3>
-		<p> Now that you are familiar with the file structure of Wirefy, we can focus on getting you up and running. We'll open the HTML file included in our download. Let's take a look at what you will see when you open this file. We don't want you to waste time adding CSS files or JavaScript files. These have all been included for you out of the gate. 	
+		<p> Now that you are familiar with the file structure of Wirefy, we can focus on getting you up and running. We'll open the HTML file included in our download. Let's take a look at what you will see when you open this file. We don't want you to waste time adding CSS files or JavaScript files. These have all been included for you out of the gate. You can also select from one of the already formatted template files that are included.
 		</p>
 		<script src="https://gist.github.com/3718714.js"> </script>
 		</section>
@@ -197,6 +196,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/jquery-1.8.2.min.js"><\/script>')</script>
   <script src="js/mediaCheck-min.js"></script>
+  <script src="js/respond.js"></script>
   <script src="js/jquery.lettering.js"></script>
   <script src="js/jquery.fittext.js"></script>
   <script src="js/jquery.flexnav-min.js"></script>
