--- a/ask-a-question.html
+++ b/ask-a-question.html
@@ -45,7 +45,6 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 ================================================= -->
  <!--[if (lt IE 9) & (!IEMobile)]>
  <script src="js/selectivizr-min.js"></script>
-<script src="js/css3-mediaqueries.js"></script>
  <![endif]-->
 
 
@@ -178,6 +177,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/jquery-1.8.2.min.js"><\/script>')</script>
   <script src="js/mediaCheck-min.js"></script>
+  <script src="js/respond.js"></script>
   <script src="js/jquery.lettering.js"></script>
   <script src="js/jquery.fittext.js"></script>
   <script src="js/jquery.flexnav-min.js"></script>
@@ -188,21 +188,6 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
   <script src="js/plugins.js"></script>
   <script src="js/script.js"></script>
   <script src="js/helper.js"></script>
-	<script>
-	$('.hidden-code').click(function(e) {
-		e.preventDefault();
-		$(this).children('.gist').slideToggle();
-	})
-		var originalText;
-		$('.example-grid').children().hover(
-			function() {
-				originalText = $(this).text();
-				$(this).html($(this).width()+'px');
-			},
-			function() {
-				$(this).html(originalText);
-			})
-	</script>
   
   
   <!-- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
