--- a/base-css.html
+++ b/base-css.html
@@ -45,7 +45,6 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 ================================================= -->
  <!--[if (lt IE 9) & (!IEMobile)]>
  <script src="js/selectivizr-min.js"></script>
-<script src="js/css3-mediaqueries.js"></script>
  <![endif]-->
  
 
@@ -263,6 +262,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/jquery-1.8.2.min.js"><\/script>')</script>
   <script src="js/mediaCheck-min.js"></script>
+  <script src="js/respond.js"></script>
   <script src="js/jquery.lettering.js"></script>
   <script src="js/jquery.fittext.js"></script>
   <script src="js/jquery.flexnav-min.js"></script>
