--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 ================================================= -->
  <!--[if (lt IE 9) & (!IEMobile)]>
  <script src="js/selectivizr-min.js"></script>
-<script src="js/css3-mediaqueries.js"></script>
  
  <![endif]-->
 
@@ -130,9 +129,9 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 				<div class="downloadables row">
 					<a href="https://github.com/cjdsie/wirefy/zipball/master" class="remove-bottom button large">Download Wirefy from Github</a>
 					<div class="post-button-note half-bottom">or <a href="https://github.com/cjdsie/wirefy/">View Source on Github</a></div>
-					<iframe src="http://ghbtns.com/github-btn.html?user=cjdsie&repo=wirefy&type=watch&count=true"
+					<iframe src="http://ghbtns.com/github-btn.html?user=cjdsie&amp;repo=wirefy&amp;type=watch&amp;count=true"
 					  allowtransparency="true" frameborder="0" scrolling="0" width="110px" height="20px"></iframe>
-					<iframe src="http://ghbtns.com/github-btn.html?user=cjdsie&repo=wirefy&type=fork&count=true"
+					<iframe src="http://ghbtns.com/github-btn.html?user=cjdsie&amp;repo=wirefy&amp;type=fork&amp;count=true"
 					  allowtransparency="true" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
 					<a href="http://twitter.com/share" class="twitter-share-button" data-text="Rapidly develop functional responsive wireframes while focusing on content rather than styles" data-count="horizontal" data-via="wirefy">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
 					<a href="https://twitter.com/wirefy" class="twitter-follow-button" data-show-count="false">Follow @wirefy</a>
@@ -163,24 +162,16 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 			<div class="row">
 			<div class="nine columns">
 				<img src="img/structure.png" alt="Structure">
-				</div>
+			</div>
 			<ul class="seven columns">
 				<li class="plan"><h4>Plan</h4><p>Architect structure through sketches &amp; organize your content quickly. This is a great way to quickly test out ideas and build a strategy that will focus your wireframes.</p></li>
 				<li class="structure"><h4>Structure</h4><p>Build specific layout designs &amp; guidelines for your content. Functionality can sometimes break the flow of a site. Some ideas are better in static form but don't work in the real world. Get through these iterations faster.</p></li>
 				<li class="communicate"><h4>Communicate</h4><p>Discuss foundation and functionality of wireframes with clients by showing them working examples of how the site will work. Drive conversations towards more productive collaboration with clients.</p></li>
 				<li class="deliver"><h4>Deliver</h4><p>Get approval on your wireframes faster. Once these have been approved you can use your wireframe builds to design on top of. Cut down your timelines and be happy that your clients will have a better understanding about the final product.</p></li>
 				</ul>
-				</divf>
+			</div>
 			</section>
-			<!--<section class="doc-section examples row clearfix">
-				<h2>Built with Wirefy</h2>
-				<ul class="row clearfix">
-					<li class="five columns"><img src="img/ENIXUS-Design.png" alt="ENIXUS Design"></li>
-					<li class="five columns alt-spacing"><img src="img/Sensei-Marketing.png" alt="Sensei Marketing"></li>
-					<li class="five columns alt-spacing"><img src="img/Bannerman-Park-Wireframe.png" alt="Bannerman Park Wireframe"></li>
-				</ul>
-				</section>-->	
-				    </div><!-- content -->
+		</div><!-- content -->
       	<footer role="contentinfo">
 	<section class="container row clearfix">
 <div class="ads four columns">
