Reduced number of scripts and HTTP requests

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- 
 Wirefy by Chris Da Sie
-Version: 2.0.5
+Version: 2.0.6
 URL: https://getwirefy.com
 Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 -->
@@ -108,6 +108,25 @@ will help you write and rewrite the SCSS files.
  	  <hr class="large">
  	  <section class="doc-section row clearfix">
 	
+		<ul class="tabs">
+		  <li><a class="active" href="#tab1">Tab 1</a></li>
+		  <li><a href="#tab2">Tab 2</a></li>
+		  <li><a href="#tab3">Tab 3</a></li>
+		</ul>
+		<ul class="tabs-content">
+		  <li class="active" id="tab1">Lorem ipsum dolor sit amet.</li>
+		  <li id="tab2">Aliquam tincidunt mauris eu risus.</li>
+		  <li id="tab3">Vestibulum auctor dapibus neque.</li>
+		</ul>
+		
+		<div class="rslides_container">
+ 	      <ul class="rslides" id="slider1">
+ 	        <li><img src="http://placehold.it/1200x300" alt="" /></li>
+ 	        <li><img src="http://placehold.it/1200x300" alt="" /></li>
+ 	        <li><img src="http://placehold.it/1200x300" alt="" /></li>
+ 	      </ul> 
+		</div>
+	
  	  <!-- Slider
 	  For use of the slider, please review responsive_slideshow.js and select the id for 
       which slide show you would like. You may need to modify this if you do not want it to fill 
@@ -158,12 +177,6 @@ will help you write and rewrite the SCSS files.
   ================================================== -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/jquery-1.8.2.min.js"><\/script>')</script>
-  <script src="js/respond.js"></script>
-  <script src="js/jquery.flexnav-min.js"></script>
-  <script src="js/tabs.js"></script>
-  <script src="js/responsiveslides.min.js"></script>
-  <script src="js/responsive_dropdown.js"></script>
-  <script src="js/responsive_slideshow.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/script.js"></script>
   <script src="js/helper.js"></script>
