--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@ will help you write and rewrite the SCSS files.
  	  <hr class="large">
  	  <section class="doc-section row clearfix">
 	
+	<!-- Tabs Sample Code 
 		<ul class="tabs">
 		  <li><a class="active" href="#tab1">Tab 1</a></li>
 		  <li><a href="#tab2">Tab 2</a></li>
@@ -117,15 +118,8 @@ will help you write and rewrite the SCSS files.
 		  <li class="active" id="tab1">Lorem ipsum dolor sit amet.</li>
 		  <li id="tab2">Aliquam tincidunt mauris eu risus.</li>
 		  <li id="tab3">Vestibulum auctor dapibus neque.</li>
-		</ul>
-		
-		<div class="rslides_container">
- 	      <ul class="rslides" id="slider1">
- 	        <li><img src="http://placehold.it/1200x300" alt="" /></li>
- 	        <li><img src="http://placehold.it/1200x300" alt="" /></li>
- 	        <li><img src="http://placehold.it/1200x300" alt="" /></li>
- 	      </ul> 
-		</div>
+		</ul> -->
+
 	
  	  <!-- Slider
 	  For use of the slider, please review responsive_slideshow.js and select the id for 
