Cleaned up the JS files

--- a/index.html
+++ b/index.html
@@ -140,23 +140,23 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 			</div>
 		 	  </section>
     <div role="main" class="content clearfix">
-	  <section class="doc-section summary row clearfix">
+	  <section class="doc-section summary row">
 		<div class="row">
-		<div class="callout five columns">
+		<div class="homepage-callout five columns">
 		<h3>What is it?</h3>
 		<p>Wirefy is a browser based responsive wireframe tool, which allows you to create functional wireframes using standard elements. Think of it as the foundation for your content to be built on. This allows you to focus on the content rather than the design to get faster sign off. Wirefy is not a one-solution answer.</p>
 		</div>
-			<div class="callout five columns alt-spacing">
+			<div class="homepage-callout five columns alt-spacing">
 			<h3>Who is for?</h3>
 			<p>For anyone who is concerned with designing with content first as the base for their responsive design. If you are new to responsive design, this tool will help you get up and running faster. Start building flexible wireframes without the headache of working through countless calculations. Instead focus on the content and flow.</p>
 			</div>
-				<div class="callout five columns alt-spacing">
+				<div class="homepage-callout five columns alt-spacing">
 				<h3>Why use it?</h3>
 				<p>Creating static wireframes can be great but sometimes clients just don't understand how they function or change based on various devices. Building functional wireframes will help you communicate with clients better and work as a foundation for your fluid designs without losing sight of the importance of the content.</p>
 				</div>
 		</div>
 		</section>
-		<section class="doc-section how-it-works row clearfix">
+		<section class="doc-section how-it-works row">
 			<h2>How does it work?</h2>
 			<p>Here is a brief look at the process to create your wireframes.</p>
 			<div class="row">
@@ -173,7 +173,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 			</section>
 		</div><!-- content -->
       	<footer role="contentinfo">
-	<section class="container row clearfix">
+	<section class="container row">
 <div class="ads four columns">
 	<!-- AdPacks.com Zone Code -->
 	<div id="bsap_1277196" class="bsarocks bsap_991a376ef1e7767477b39694cfa817c9 clearfix"></div>
@@ -200,13 +200,6 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/jquery-1.8.2.min.js"><\/script>')</script>
   <script src="js/mediaCheck-min.js"></script>
-  <script src="js/jquery.lettering.js"></script>
-  <script src="js/jquery.fittext.js"></script>
-  <script src="js/jquery.flexnav-min.js"></script>
-  <script src="js/tabs.js"></script>
-  <script src="js/responsiveslides.min.js"></script>
-  <script src="js/responsive_dropdown.js"></script>
-  <script src="js/responsive_slideshow.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/script.js"></script>
   <script src="js/helper.js"></script>
