--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ will help you write and rewrite the SCSS files.
 	  <div class="logo">
 	    <h1>Wirefy</h1>
 	  </div>
-	  <div class='menu-button'></div>
+	  <div class="menu-button"></div>
 	  <a href="#main" class="skip">Skip navigation</a>
 	  <nav role="navigation" id="nav">
 	    <ul>
